force-app/main/default/objects/DM_Loan_Account__c/DM_Loan_Account__c.object-meta.xml
<CustomObject>
    <label>DM CL Contract</label>
    <nameField>
        <label>DM Loan Con Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DM CL Contract</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>