force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>DM_Account_Type__c</fullName>
    <label>DM Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DM_Current</fullName>
            </value>
            <value>
                <fullName>DM_Type2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>