force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Accrual_Amount_Accounted_For__c.field-meta.xml
<CustomField>
    <fullName>DM_Accrual_Amount_Accounted_For__c</fullName>
    <label>DM Accrual Amount Accounted For</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>