force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Accrual_Entry_Stop_Indicator__c.field-meta.xml
<CustomField>
    <fullName>DM_Accrual_Entry_Stop_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Interest accrual entries will not be created when this flag is checked.</description>
    <inlineHelpText>Interest accrual entries will not be created when this flag is checked.</inlineHelpText>
    <label>DM Accrual Entry Stop Indicator</label>
    <type>Checkbox</type>
</CustomField>