force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Accrual_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>DM_Accrual_Start_Date__c</fullName>
    <description>The date from which interest accrual starts</description>
    <inlineHelpText>The date from which interest accrual starts</inlineHelpText>
    <label>DM Accrual Start Date</label>
    <type>Date</type>
</CustomField>