force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Accrual_Start_Days__c.field-meta.xml
<CustomField>
    <fullName>DM_Accrual_Start_Days__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Accrual Start Days after the loan effective date.</description>
    <inlineHelpText>Number of Days after the Contract Date from When the Interest Accrual will Start.</inlineHelpText>
    <label>DM Accrual Start Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>