force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Accrual_Stop_Indicator__c.field-meta.xml
<CustomField>
    <fullName>DM_Accrual_Stop_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If Accrual needs to be stopped.</description>
    <inlineHelpText>Indicates if the accrual has to be stopped.</inlineHelpText>
    <label>DM Accrual Stop Indicator</label>
    <type>Checkbox</type>
</CustomField>