force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Accrue_Past_Maturity__c.field-meta.xml
<CustomField>
    <fullName>DM_Accrue_Past_Maturity__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates if interest accrual should happen after maturity.</description>
    <inlineHelpText>If this is unchecked, then the account will stop accruing interest post maturity.</inlineHelpText>
    <label>DM Accrue Past Maturity</label>
    <type>Checkbox</type>
</CustomField>