force-app/main/default/objects/DM_Loan_Account__c/fields/DM_ACH_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>DM_ACH_Account_Number__c</fullName>
    <description>Account number</description>
    <label>DM ACH Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>