force-app/main/default/objects/DM_Loan_Account__c/fields/DM_ACH_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>DM_ACH_Account_Type__c</fullName>
    <description>Account type: Saving or checking</description>
    <label>DM ACH Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DM_Checking</fullName>
            </value>
            <value>
                <fullName>DM_Saving</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>