force-app/main/default/objects/DM_Loan_Account__c/fields/DM_ACH_Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>DM_ACH_Bank_Name__c</fullName>
    <description>Bank name</description>
    <inlineHelpText>Name of the bank</inlineHelpText>
    <label>DM ACH Bank Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>