force-app/main/default/objects/DM_Loan_Account__c/fields/DM_ACH_Debit_Amount__c.field-meta.xml
<CustomField>
    <fullName>DM_ACH_Debit_Amount__c</fullName>
    <description>Debit amount</description>
    <inlineHelpText>Debit amount</inlineHelpText>
    <label>DM ACH Debit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>