force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Ach_Debit_Day__c.field-meta.xml
<CustomField>
    <fullName>DM_Ach_Debit_Day__c</fullName>
    <description>Debit day for ACH payment</description>
    <inlineHelpText>Ach Debit Day</inlineHelpText>
    <label>DM ACH Debit Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>