force-app/main/default/objects/DM_Loan_Account__c/fields/DM_ACH_Drawer_Name__c.field-meta.xml
<CustomField>
    <fullName>DM_ACH_Drawer_Name__c</fullName>
    <description>ACH Drawer Name</description>
    <inlineHelpText>ACH Drawer Name</inlineHelpText>
    <label>DM ACH Drawer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>