force-app/main/default/objects/DM_Loan_Account__c/fields/DM_ACH_Frequency__c.field-meta.xml
<CustomField>
    <fullName>DM_ACH_Frequency__c</fullName>
    <label>DM ACH Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DM_Daily</fullName>
            </value>
            <value>
                <fullName>DM_Weekly</fullName>
            </value>
            <value>
                <fullName>DM_Bi-weekly</fullName>
            </value>
            <value>
                <fullName>DM_Semi-Monthly</fullName>
            </value>
            <value>
                <fullName>DM_Monthly</fullName>
            </value>
            <value>
                <fullName>DM_Bi-Monthly</fullName>
            </value>
            <value>
                <fullName>DM_Quarterly</fullName>
            </value>
            <value>
                <fullName>DM_Semi-Annual</fullName>
            </value>
            <value>
                <fullName>DM_Annual</fullName>
            </value>
            <value>
                <fullName>DM_Single-Payment</fullName>
            </value>
            <value>
                <fullName>DM_Semi-Monthly-PD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>