force-app/main/default/objects/DM_Loan_Account__c/fields/DM_ACH_Frequency_Cycle__c.field-meta.xml
<CustomField>
    <fullName>DM_ACH_Frequency_Cycle__c</fullName>
    <label>DM ACH Frequency Cycle</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>