force-app/main/default/objects/DM_Loan_Account__c/fields/DM_ACH_Next_Debit_Date__c.field-meta.xml
<CustomField>
    <fullName>DM_ACH_Next_Debit_Date__c</fullName>
    <inlineHelpText>It is the next date on which the installment amount will be deducted from the borrower&#39;s account.</inlineHelpText>
    <label>DM ACH Next Debit Date</label>
    <type>Date</type>
</CustomField>