force-app/main/default/objects/DM_Loan_Account__c/fields/DM_ACH_Relationship_Type__c.field-meta.xml
<CustomField>
    <fullName>DM_ACH_Relationship_Type__c</fullName>
    <description>ACH relationship type</description>
    <label>DM ACH Relationship Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DM_Primary</fullName>
            </value>
            <value>
                <fullName>DM_Spouse</fullName>
            </value>
            <value>
                <fullName>DM_Secondary</fullName>
            </value>
            <value>
                <fullName>DM_Cosigner</fullName>
            </value>
            <value>
                <fullName>DM_Cosigner Spouse</fullName>
            </value>
            <value>
                <fullName>DM_Cosigner2</fullName>
            </value>
            <value>
                <fullName>DM_Cosigner2 Spouse</fullName>
            </value>
            <value>
                <fullName>DM_Third Party</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>