force-app/main/default/objects/DM_Loan_Account__c/fields/DM_ACH_Routing_Number__c.field-meta.xml
<CustomField>
    <fullName>DM_ACH_Routing_Number__c</fullName>
    <description>Routing number</description>
    <inlineHelpText>ACH routing number is a nine digit number used to clear electronic transactions to and from your bank account.</inlineHelpText>
    <label>DM ACH Routing Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>