force-app/main/default/objects/DM_Loan_Account__c/fields/DM_ACH_Second_Debit_Date__c.field-meta.xml
<CustomField>
    <fullName>DM_ACH_Second_Debit_Date__c</fullName>
    <label>DM ACH Second Debit Date</label>
    <type>Date</type>
</CustomField>