force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Actual_Interest_Only_Payments__c.field-meta.xml
<CustomField>
    <fullName>DM_Actual_Interest_Only_Payments__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If this is checked, interest only payments are set to actual interest amounts during the interest only period. If it is unchecked, the system computes a single interest only amount for all interest only payments.</inlineHelpText>
    <label>DM Actual Interest Only Payments</label>
    <type>Checkbox</type>
</CustomField>