force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Add_Fee_Amount_To_Bill__c.field-meta.xml
<CustomField>
    <fullName>DM_Add_Fee_Amount_To_Bill__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field when selected and in conjunction with &#39;Include In Dues&#39; in fee will add charge amounts to bill, thereby increasing bill amounts. Delinquent Amount will be the total amount due including fees billed.</description>
    <inlineHelpText>This field when selected and in conjunction with &#39;Include In Dues&#39; in fee will add charge amounts to bill, thereby increasing bill amounts. Delinquent Amount will be the total amount due including fees billed.</inlineHelpText>
    <label>DM Add Fee Amount To Bill</label>
    <type>Checkbox</type>
</CustomField>