force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Allow_Interest_Split_before_Maturity__c.field-meta.xml
<CustomField>
    <fullName>DM_Allow_Interest_Split_before_Maturity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DM Allow Interest Split before Maturity</label>
    <type>Checkbox</type>
</CustomField>