force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Amortization_Schedule_Generated__c.field-meta.xml
<CustomField>
    <fullName>DM_Amortization_Schedule_Generated__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This flag is set to true when the amortization schedule is successfully generated for a contract with Funding In Tranches as &#39;Yes&#39; .</inlineHelpText>
    <label>DM Amortization Schedule Generated</label>
    <type>Checkbox</type>
</CustomField>