force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Amortization_Term__c.field-meta.xml
<CustomField>
    <fullName>DM_Amortization_Term__c</fullName>
    <inlineHelpText>This is the amortization term of the loan. This can be equal or greater than the Term of the loan. If not specified, it is equal to the Term.</inlineHelpText>
    <label>DM Amortization Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>