force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Amount_to_Current__c.field-meta.xml
<CustomField>
    <fullName>DM_Amount_to_Current__c</fullName>
    <formula>DM_Delinquent_Amount__c +   IF(DM_Delinquent_Amount__c==0, 0, DM_Fees_Remaining__c) + IF(DM_Delinquent_Amount__c==0, 0, DM_Capitalized_Fee__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This includes delinquent amount + any unpaid fees on the account.</inlineHelpText>
    <label>DM Amount to Current</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>