force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Application_Date__c.field-meta.xml
<CustomField>
    <fullName>DM_Application_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <inlineHelpText>Application Received Date.</inlineHelpText>
    <label>DM Application Date</label>
    <type>Date</type>
</CustomField>