force-app/main/default/objects/DM_Loan_Account__c/fields/DM_APR__c.field-meta.xml
<CustomField>
    <fullName>DM_APR__c</fullName>
    <inlineHelpText>Annual Percentage Rate</inlineHelpText>
    <label>DM APR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>