force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Auto_Create_Excess_Transaction__c.field-meta.xml
<CustomField>
    <fullName>DM_Auto_Create_Excess_Transaction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DM Auto Create Excess Transaction</label>
    <type>Checkbox</type>
</CustomField>