force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Auto_Renewable__c.field-meta.xml
<CustomField>
    <fullName>DM_Auto_Renewable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field indicates whether the investment product loan is auto renewable or not.</description>
    <label>DM Auto Renewable</label>
    <type>Checkbox</type>
</CustomField>