force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Available_Amount_For_Next_Funding__c.field-meta.xml
<CustomField>
    <fullName>DM_Available_Amount_For_Next_Funding__c</fullName>
    <formula>(DM_Credit_Limit_Current__c -  DM_Principal_Remaining__c ) +  DM_Excess__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Field is only available for LOC Type Contracts. Field suggests amount available for next disbursal.</inlineHelpText>
    <label>DM Available Amount For Next Funding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>