force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Average_Monthly_Income__c.field-meta.xml
<CustomField>
    <fullName>DM_Average_Monthly_Income__c</fullName>
    <label>DM Average Monthly Income</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>