force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Bill_Follow_Schedules__c.field-meta.xml
<CustomField>
    <fullName>DM_Bill_Follow_Schedules__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will represent if bill follows the schedules.</description>
    <inlineHelpText>This field will represent if bill follows the schedules.</inlineHelpText>
    <label>DM Bill Follow Schedules</label>
    <type>Checkbox</type>
</CustomField>