force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Boarding_Date__c.field-meta.xml
<CustomField>
    <fullName>DM_Boarding_Date__c</fullName>
    <label>DM Boarding Date</label>
    <type>Date</type>
</CustomField>