force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Borrower_ACH__c.field-meta.xml
<CustomField>
    <fullName>DM_Borrower_ACH__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Borrower ACH</description>
    <inlineHelpText>Borrower ACH</inlineHelpText>
    <label>DM Borrower ACH</label>
    <referenceTo>DM_Bank_Account__c</referenceTo>
    <relationshipName>Lending</relationshipName>
    <type>Lookup</type>
</CustomField>