force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Branch__c.field-meta.xml
<CustomField>
    <fullName>DM_Branch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DM Branch</label>
    <referenceTo>loan__Office_Name__c</referenceTo>
    <relationshipLabel>DM CL Contract</relationshipLabel>
    <relationshipName>DM_CL_Contract</relationshipName>
    <type>Lookup</type>
</CustomField>