force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Buyback_Date__c.field-meta.xml
<CustomField>
    <fullName>DM_Buyback_Date__c</fullName>
    <label>DM Buyback Date</label>
    <type>Date</type>
</CustomField>