force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Buyback_Status__c.field-meta.xml
<CustomField>
    <fullName>DM_Buyback_Status__c</fullName>
    <inlineHelpText>This field is used to indicate the loan&#39;s buyback status.</inlineHelpText>
    <label>DM Buyback Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DM_Not Yet Boarded</fullName>
            </value>
            <value>
                <fullName>DM_Boarded</fullName>
            </value>
            <value>
                <fullName>DM_Disbursed By Bank</fullName>
            </value>
            <value>
                <fullName>DM_Buyback Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>