force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Cancellation_Tolerance_Amount__c.field-meta.xml
<CustomField>
    <fullName>DM_Cancellation_Tolerance_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>DM Cancellation Tolerance Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>