force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Capitalization_Frequency__c.field-meta.xml
<CustomField>
    <fullName>DM_Capitalization_Frequency__c</fullName>
    <description>This decides the frequency at which capitalization will be done</description>
    <inlineHelpText>This decides the Capitalization Frequency, below are the supported ones:
Daily
Weekly
Bi-weekly
Semi-Monthly
Monthly
Bi-Monthly
Quarterly
Semi-Annual
Annual
Single-Payment</inlineHelpText>
    <label>DM Capitalization Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DM_Daily</fullName>
            </value>
            <value>
                <fullName>DM_Weekly</fullName>
            </value>
            <value>
                <fullName>DM_Bi-weekly</fullName>
            </value>
            <value>
                <fullName>DM_Semi-Monthly</fullName>
            </value>
            <value>
                <fullName>DM_Monthly</fullName>
            </value>
            <value>
                <fullName>DM_Bi-Monthly</fullName>
            </value>
            <value>
                <fullName>DM_Quarterly</fullName>
            </value>
            <value>
                <fullName>DM_Semi-Annual</fullName>
            </value>
            <value>
                <fullName>DM_Annual</fullName>
            </value>
            <value>
                <fullName>DM_Single-Payment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>