force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Case_Safe_ID__c.field-meta.xml
<CustomField>
    <fullName>DM_Case_Safe_ID__c</fullName>
    <label>DM Case Safe ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>