force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Change_Recurring_ACH_Terms__c.field-meta.xml
<CustomField>
    <fullName>DM_Change_Recurring_ACH_Terms__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DM Change Recurring ACH Terms</label>
    <type>Checkbox</type>
</CustomField>