force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Charged_Off_Capitalized_Fees__c.field-meta.xml
<CustomField>
    <fullName>DM_Charged_Off_Capitalized_Fees__c</fullName>
    <label>DM Charged Off Capitalized Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>