force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Charged_Off_Interest__c.field-meta.xml
<CustomField>
    <fullName>DM_Charged_Off_Interest__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Charged off Interest Balance.</inlineHelpText>
    <label>DM Charged Off Interest</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>