force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Collateral_Notes__c.field-meta.xml
<CustomField>
    <fullName>DM_Collateral_Notes__c</fullName>
    <description>Collateral Notes</description>
    <inlineHelpText>Collateral Notes</inlineHelpText>
    <label>DM Collateral Notes</label>
    <type>TextArea</type>
</CustomField>