force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Collateral_Type__c.field-meta.xml
<CustomField>
    <fullName>DM_Collateral_Type__c</fullName>
    <label>DM Collateral Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DM_Fixed Asset</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>