force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Contingency_Status_Code__c.field-meta.xml
<CustomField>
    <fullName>DM_Contingency_Status_Code__c</fullName>
    <description>Field Stores contingency status of a contract.</description>
    <inlineHelpText>Field Stores contingency status of a contract.</inlineHelpText>
    <label>DM Contingency Status Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DM_Bankruptcy (B)</fullName>
            </value>
            <value>
                <fullName>DM_Deceased (D)</fullName>
            </value>
            <value>
                <fullName>DM_Fraudulent (F)</fullName>
            </value>
            <value>
                <fullName>DM_Duplicate (K)</fullName>
            </value>
            <value>
                <fullName>DM_No Communication (X)</fullName>
            </value>
            <value>
                <fullName>DM_Suspend Disbursal (Z)</fullName>
            </value>
            <value>
                <fullName>DM_Normal (N)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>