force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>DM_Contract_Type__c</fullName>
    <inlineHelpText>Contract Type - New or Refinance</inlineHelpText>
    <label>DM Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Refinance</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>