force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Contractual_Index_Rate__c.field-meta.xml
<CustomField>
    <fullName>DM_Contractual_Index_Rate__c</fullName>
    <defaultValue>0.00</defaultValue>
    <inlineHelpText>Index Rate at the time of Contract</inlineHelpText>
    <label>DM Index Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>