force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Contractual_Second_Due_Day__c.field-meta.xml
<CustomField>
    <fullName>DM_Contractual_Second_Due_Day__c</fullName>
    <inlineHelpText>Second Due Day which will be used only for Semi-Monthly PD loans.</inlineHelpText>
    <label>DM Second Due Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>