force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Credit_Limit_Current__c.field-meta.xml
<CustomField>
    <fullName>DM_Credit_Limit_Current__c</fullName>
    <description>Current Credit Limit for Line of Credit</description>
    <inlineHelpText>This is the current maximum advance limit and can differ from contractual credit limit if the user decide to change the credit limit for the customer.
Total advance withdrawn must not exceed this limit at any point of time.</inlineHelpText>
    <label>DM Current Credit Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>