force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Current_Draw_Term__c.field-meta.xml
<CustomField>
    <fullName>DM_Current_Draw_Term__c</fullName>
    <defaultValue>0</defaultValue>
    <description>If user extends the draw term, then the new draw term will be stored in this field</description>
    <inlineHelpText>Current Draw Term</inlineHelpText>
    <label>DM Current Draw Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>