force-app/main/default/objects/DM_Loan_Account__c/fields/DM_Current_Due_Day_Numeric__c.field-meta.xml
<CustomField>
    <fullName>DM_Current_Due_Day_Numeric__c</fullName>
    <label>DM Current Due Day(Numeric)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>